--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-    
-    <script src="src/index.js"></script>
+    <div class="wrapper">
+        <h1>Webpack</h1>
+    </div>
+    <script src="dist/app.js"></script>
 </body>
 </html>
